# ur5_rg2_ign

./: CMakeLists.txt  README.md  package.xml
config/: joint_limits.yaml  kinematics.yaml  ur5_rg2.srdf  ur5_rg2_control.yaml
launch/: empty_world.world  ur5_rg2.rviz  ur5_rg2_bringup.launch  ur5_rg2_bringup_moveit.launch  ur5_rg2_control.launch  ur5_rg2_gazebo.launch  ur5_rg2_moveit.launch
scripts/: pick_ball.py  test_gripper.py
urdf/: ur5_rg2.urdf
