<?xml version="1.0"?>
<package format="2">
    <name>ur5_rg2_ign</name>
    <version>1.0.0</version>
    <description>Universal Robot 5 (UR5) robot with OnRobot RG2 gripper for Ignition and Gazebo.</description>
    <maintainer email="orsula.andrej@gmail.com">Andrej Orsula</maintainer>
    <author>Andrej Orsula</author>
    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>
    
    <exec_depend>robot_state_publisher</exec_depend>
    <exec_depend>joint_state_publisher</exec_depend>
    <exec_depend>gazebo_ros</exec_depend>
    <exec_depend>xacro</exec_depend>
    <exec_depend>rviz</exec_depend>
    <exec_depend>controller_manager</exec_depend>
    <exec_depend>joint_state_controller</exec_depend>
    <exec_depend>position_controllers</exec_depend>
    <exec_depend>gazebo_ros_control</exec_depend>
    <exec_depend>effort_controllers</exec_depend>
</package>
